style.css
body {
    margin: 0 5px 0 5px;
    font-family: Arial, Helvetica, sans-serif;
    background-color: rgba(255, 255, 247, 1);
}

#sidebar {
    margin-top: 5px;
}

.button-mode {
    margin: 0 4px 0 10px;
    width: 35px;
    height: 35px;
    border: none;
    background: none;
}

#options{
    position: inherit;
    z-index: 2;
    width: 35px;
    height: 35px;
}

canvas {
    position: inherit;
    background-color: green;
}

#mainCanvas {
    position: inherit;
    clear: left;
}

footer {
    vertical-align: middle;
    font-weight: bold;
    font-size: 14px;
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    color: rgb(255, 255, 255);
    background-color: rgb(59, 59, 59);
    text-align: center;
}
#menuToggle
{
  display: block;
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  user-select: none;
}

.sliderX,
.sliderY,
.sliderPen {
    margin-left: 10px;
    margin-right: 5px;
}

#valuesX,
#valuesY,
#valuesPen {
    font-weight: bold;
}

.sliderX,
.sliderY,
.sliderPen {
    -webkit-appearance: none;
    background: #d3d3d3;
    height: 10px;
}

.sliderX:hover,
.sliderY:hover,
.sliderPen:hover {
    opacity: 1;
}

.sliderX::-webkit-slider-thumb,
.sliderY::-webkit-slider-thumb,
.sliderPen::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 15px;
    height: 10px;
    background: #4CAF50;
    cursor: pointer;
}

.sliderX::-moz-range-thumb,
.sliderY::-moz-range-thumb,
.sliderPen::-moz-range-thumb {
    width: 15px;
    height: 10px;
    background: #4CAF50;
    cursor: pointer;
    content: "";
}

input[type="list"] {
    background: linear-gradient(to bottom, #b8e356 5%, #a5cc52 100%);
    background-color: #b8e356;
    border-radius: 6px;
    border: .5px solid #83c41a;
    display: inline-block;
    cursor: pointer;
    color: #ffffff;
    font-family: Arial;
    font-size: 11px;
    font-weight: bold;
    padding: 5px 16px;
    text-decoration: none;
}

#Label {
    font-size: medium;
    font-weight: 700;
    width: 61px;
    display: inline-block;
    font-family: FreeMono, monospace;
}

input[class="color"], #colorPalette {
    color: transparent;
    -webkit-appearance: none;
    border: none;
    width: 25px;
    height: 25px;
    border-radius: 50%;
    border-width: 1px;
    border-style: solid;
    border-color: rgb(169, 169, 169);
    border-image: initial;
    padding: 1px 2px;
    content: "";
}

input[type="color"] {
    -webkit-appearance: none;
    border: none;
    width: 25px;
    height: 25px;
    border-radius: 50%;
}

input[type="color"]::-webkit-color-swatch-wrapper {
    padding: 0;
}

input[type="color"]::-webkit-color-swatch {
    border: none;
    border-radius: 50%;
}

.kolorki {
    margin-top: 5px;
    text-align: center;
}

.suwaczki {
    margin: 5px 0 5px 0;
}

.guziczki {
    margin: 7px 0 7px 0;
}

.button {
    /*box-shadow: inset 0px 1px 0px 0px #d9fbbe;*/
    background: linear-gradient(to bottom, #b8e356 5%, #a5cc52 100%);
    background-color: #b8e356;
    border-radius: 6px;
    border: .5px solid #83c41a;
    display: inline-block;
    cursor: pointer;
    color: #ffffff;
    font-family: Arial;
    font-size: 11px;
    font-weight: bold;
    padding: 5px 16px;
    text-decoration: none;
    margin: 1px 1px 4px 1px;
    /*text-shadow: 0px 1px 0px #86ae47;*/
}

.button:hover {
    background: linear-gradient(to bottom, #a5cc52 5%, #b8e356 100%);
    background-color: #a5cc52;
}

.button:active {
    position: relative;
    top: 1px;
}

